--- a/foundry.toml
+++ b/foundry.toml
@@ -12,3 +12,32 @@ via_ir = false
 [lint]
 exclude_lints = ["screaming-snake-case-immutable", "screaming-snake-case-const"]
 lint_on_build = false
+
+[etherscan]
+  arbitrum = { key = "${ARBISCAN_TOKEN}" }
+  avalanche = { key = "${SNOWTRACE_TOKEN}" }
+  blast_sepolia = {key = "verifyContract", url = "https://api.routescan.io/v2/network/testnet/evm/168587773/etherscan"}
+  blast_mainnet = {key = "${BLASTSCAN_TOKEN}", url = "https://api.blastscan.io/api"}
+ 
+  bnb_smart_chain = { key = "${BSCSCAN_TOKEN}" }
+  gnosis_chain = { key = "${API_KEY_GNOSISSCAN}" }
+  goerli = { key = "${ETHERSCAN_TOKEN}" }
+  mainnet = { key = "${ETHERSCAN_TOKEN}" }
+  optimism = { key = "${API_KEY_OPTIMISTIC_ETHERSCAN}" }
+  polygon = { key = "${POLYGONSCAN_TOKEN}" }
+  sepolia = { key = "${ETHERSCAN_TOKEN}" }
+
+[rpc_endpoints]
+
+  arbitrum = "https://burned-hardworking-dust.arbitrum-mainnet.quiknode.pro/${WEB3_QUICKNODE_ARB}/"
+  avalanche = "https://avalanche-mainnet.infura.io/v3/${WEB3_INFURA_PROJECT_ID}"
+  blast_sepolia = "https://red-billowing-sanctuary.blast-sepolia.quiknode.pro/${WEB3_QUICKNODE_ID}"
+  blast_mainnet = "https://orbital-soft-violet.blast-mainnet.quiknode.pro/${WEB3_QUICKNODE_BLAST}/"
+  bnb_smart_chain = "https://bsc-dataseed.bnbchain.org"
+  gnosis_chain = "https://rpc.gnosischain.com"
+  goerli = "https://goerli.infura.io/v3/${WEB3_INFURA_PROJECT_ID}"
+  localhost = "http://localhost:8545"
+  mainnet = "https://rpc.envelop.is/eth"
+  optimism = "https://optimism-mainnet.infura.io/v3/${WEB3_INFURA_PROJECT_ID}"
+  polygon = "https://polygon-mainnet.infura.io/v3/${WEB3_INFURA_PROJECT_ID}"
+  sepolia = "https://sepolia.infura.io/v3/${WEB3_INFURA_PROJECT_ID}"
