FIX resolve conflict in openxeppelin version in calibur and uniswap core(5.2 vs 5)

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/universal-router"]
 	path = lib/universal-router
 	url = https://github.com/uniswap/universal-router
+[submodule "lib/calibur"]
+	path = lib/calibur
+	url = https://github.com/uniswap/calibur
